--- a/Services/bdr.html
+++ b/Services/bdr.html
@@ -107,7 +107,7 @@ details[open] > summary .material-symbols-outlined {
          x-transition:leave-end="opacity-0 transform scale-95"
          class="absolute z-10 mt-2 w-56 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
       <div class="py-1 text-center">
-        <a href="#managed-cybersecurity" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Managed Cybersecurity</a>
+        <a href="./managed-cybersecurity.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Managed Cybersecurity</a>
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Penetration Testing</a>
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">IT Support</a>
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Co-Managed IT</a>
@@ -241,7 +241,7 @@ details[open] > summary .material-symbols-outlined {
          x-transition:leave="transition ease-in-out duration-300 transform"
          x-transition:leave-start="translate-x-0"
          x-transition:leave-end="translate-x-full"
-         class="fixed top-0 right-0 w-full h-full bg-background-light dark:bg-background-dark shadow-xl z-50 xl:hidden overflow-y-auto">
+         class="fixed top-0 right-0 w-full h-full bg-[linear-gradient(180deg,var(--tw-gradient-stops))] from-neutral-100 to-neutral-400 dark:bg-background-dark shadow-xl z-50 xl:hidden overflow-y-auto">
         
         <div class="p-4 border-b border-slate-200 dark:border-slate-700 flex justify-end">
             <button @click="isMenuOpen = false" class="text-slate-800 dark:text-slate-200">
@@ -437,11 +437,11 @@ details[open] > summary .material-symbols-outlined {
     </div>
   </section>
 
-  <section class="py-20 md:py-24 bg-surface-light dark:bg-surface-dark" id="features">
+  <section class="py-20 md:py-24  dark:bg-surface-dark bg-[#2E4A6F]" id="features">
     <div class="container mx-auto px-6">
       <div class="max-w-3xl mx-auto text-center">
-        <h2 class="text-3xl md:text-4xl font-bold font-display text-slate-900 dark:text-white">How We Guarantee Business Continuity</h2>
-        <p class="mt-4 text-lg text-slate-600 dark:text-slate-400">Our Backup &amp; Disaster Recovery (BDR) service is an end-to-end solution, meticulously designed to protect your data at every layer and ensure a swift, seamless recovery when you need it most.</p>
+        <h2 class="text-3xl md:text-4xl font-bold font-display text-white dark:text-white">How We Guarantee Business Continuity</h2>
+        <p class="mt-4 text-lg text-white dark:text-slate-400">Our Backup &amp; Disaster Recovery (BDR) service is an end-to-end solution, meticulously designed to protect your data at every layer and ensure a swift, seamless recovery when you need it most.</p>
       </div>
       <div class="mt-16 grid lg:grid-cols-2 gap-8 items-start">
         <div class="space-y-4">
@@ -522,20 +522,24 @@ details[open] > summary .material-symbols-outlined {
   </section>
 
   <section class="py-20 bg-black" id="contact">
-    <div class="container mx-auto px-6 text-center">
-      <h2 class="text-3xl md:text-4xl font-bold font-display text-white">Ready to Make Data Loss a Thing of the Past?</h2>
-      <p class="mt-4 max-w-2xl mx-auto text-white/90">
-          Don't wait for a disaster to test your backup plan. Let's have a conversation about your current strategy and discover how Summit IT can provide true business resilience and peace of mind.
-      </p>
-      <div class="mt-8">
-        <a class="bg-accent text-white font-bold py-3 px-8 rounded-lg hover:bg-opacity-90 transition-opacity text-lg" href="#">
-        Get My Free BDR Assessment
-        </a>
+    <div class="container mx-auto px-6 flex flex-col items-center justify-center md:flex-row md:space-x-12"> 
+      <div class="w-full md:w-1/2 px-4">
+            <img class="rounded-xl object-cover w-full max-h-96" src="../asset/AdobeStock_105046282.jpeg" alt="Securing technology illustration">
+      </div>
+      <div class="container mx-auto px-6 text-center">
+        <h2 class="text-3xl md:text-4xl font-bold font-display text-white">Ready to Make Data Loss a Thing of the Past?</h2>
+        <p class="mt-4 max-w-2xl mx-auto text-white/90">
+            Don't wait for a disaster to test your backup plan. Let's have a conversation about your current strategy and discover how Summit IT can provide true business resilience and peace of mind.
+        </p>
+        <div class="mt-8">
+          <a class="bg-accent text-white font-bold py-3 px-8 rounded-lg hover:bg-opacity-90 transition-opacity text-lg" href="#">
+           Free BDR Assessment
+          </a>
+        </div>
       </div>
     </div>
   </section>
 </main>
-
 <footer class="bg-accent dark:bg-slate-900 border-t border-black dark:border-slate-800 text-white">
   <div class="container mx-auto px-6 py-12 md:py-16 md:px-16">
     <div class="flex justify-center grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-8 md:flex justify-center">
