--- a/Services/managed-cybersecurity.html
+++ b/Services/managed-cybersecurity.html
@@ -111,7 +111,7 @@ details[open] > summary .material-symbols-outlined {
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Penetration Testing</a>
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">IT Support</a>
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Co-Managed IT</a>
-        <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Backup & Recovery</a>
+        <a href="./bdr.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Backup & Recovery</a>
 
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Business Communications (VoIP)</a>
         <a href="#cloud-services" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Conference Room as a Service</a>
@@ -241,7 +241,8 @@ details[open] > summary .material-symbols-outlined {
          x-transition:leave="transition ease-in-out duration-300 transform"
          x-transition:leave-start="translate-x-0"
          x-transition:leave-end="translate-x-full"
-         class="fixed top-0 right-0 w-full h-full bg-background-light dark:bg-background-dark shadow-xl z-50 xl:hidden overflow-y-auto">
+         class="fixed top-0 right-0 w-full h-full bg-[linear-gradient(180deg,var(--tw-gradient-stops))] from-neutral-100 to-neutral-400 dark:bg-background-dark shadow-xl z-50 xl:hidden overflow-y-auto">
+
         
         <div class="p-4 border-b border-slate-200 dark:border-slate-700 flex justify-end">
             <button @click="isMenuOpen = false" class="text-slate-800 dark:text-slate-200">
@@ -574,16 +575,21 @@ details[open] > summary .material-symbols-outlined {
   </section>
 
   <section class="py-20 bg-black" id="contact">
-    <div class="container mx-auto px-6 text-center">
-      <h2 class="text-3xl md:text-4xl font-bold font-display text-white">Ready to Elevate Your Security Posture?</h2>
-      <p class="mt-4 max-w-2xl mx-auto text-white/90">
+    <div class="container mx-auto px-6 flex flex-col items-center justify-center md:flex-row md:space-x-12"> 
+       <div class="w-full md:w-1/2 px-4">
+            <img class="rounded-xl object-cover w-full max-h-96" src="../asset/AdobeStock_105046282.jpeg" alt="Securing technology illustration">
+      </div>
+      <div class="container mx-auto px-6 text-center">
+        <h2 class="text-3xl md:text-4xl font-bold font-display text-white">Ready to Elevate Your Security Posture?</h2>
+        <p class="mt-4 max-w-2xl mx-auto text-white/90">
           Stop reacting to threats and start anticipating them. Schedule a free, no-obligation consultation with our cybersecurity experts to discover how we can fortify your business.
-      </p>
-    <div class="mt-8">
-      <a class="bg-accent text-white font-bold py-3 px-8 rounded-lg hover:bg-opacity-90 transition-opacity text-lg" href="#">
-            Get My Free Security Consultation
+        </p>
+        <div class="mt-8">
+        <a class="bg-accent text-white font-bold py-3 px-8 rounded-lg hover:bg-opacity-90 transition-opacity text-lg" href="#">
+              Free Security Consultation
       </a>
-    </div>
+        </div>
+      </div>
     </div>
   </section>
 </main>
