--- a/Services/managed-cybersecurity.html
+++ b/Services/managed-cybersecurity.html
@@ -81,10 +81,10 @@ details[open] > summary .material-symbols-outlined {
 
 <script defer="" src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
-<body class="font-sans bg-background-light dark:bg-background-dark text-slate-800 dark:text-slate-200 antialiased">
+<body class="font-sans hero-bg-light dark:bg-background-dark text-slate-800 dark:text-slate-200 antialiased">
   <div class="relative min-h-screen" x-data="{ isMenuOpen: false }">
    
-    <header class="sticky top-0 z-50 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-sm border-b border-slate-200 dark:border-slate-800">
+    <header class="sticky top-0 z-50 bg-background-light/60 dark:bg-background-dark/80 backdrop-blur-sm border-b border-slate-200 dark:border-slate-800">
       <div class="container mx-auto px-4 py-4 md:py-8 flex justify-between items-center">
 
         <a class="flex items-center space-x-3" href="../index.html">
