--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 </div>
 </section>
 
-<section class="py-20" id="about">
+<section class="py-20 bg-background-light" id="about">
   <div class="container mx-auto px-6">
     <div class="grid md:grid-cols-2 gap-12 items-center">
         <div>
@@ -635,7 +635,7 @@
   </div>
 </section>
 
-<section class="py-20" id="blog">
+<section class="py-20 bg-background-light" id="blog">
   <div class="container mx-auto px-6">
     <div class="text-center mb-12">
       <h2 class="text-3xl md:text-4xl font-bold font-display text-slate-900 dark:text-white">Latest News &amp; Insights</h2>
