--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
     .service-carousel::-webkit-scrollbar-thumb:hover {
       background: #bf2026;
     }
+
+    /*Scroll Functionality CSS*/
+
+    /*For Scroll Transition from Left*/
+    .scroll-item {
+        opacity: 0;
+        transform: translateX(-30px);
+        transition: all .8s ease-in-out;
+    }
+    
+    .scroll-item.visible {
+        opacity: 1;
+        transform:translateX(0);
+    }
+
+    /*For Scroll Transition from Right*/
+    .scroll-item-right {
+        opacity: 0;
+        transform: translateX(60px);
+        transition: all .8s ease-in-out;
+    }
+
+    .scroll-item-right.visible {
+        opacity: 1; 
+        transform: translateX(0px);
+        transition: all .8s ease-in-out;
+    }
   </style>
 
 <script defer="" src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -95,7 +122,7 @@
       <div class="py-1 text-center">
         <a href="./Services/managed-cybersecurity.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Managed Cybersecurity</a>
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Penetration Testing</a>
-        <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">IT Support</a>
+        <a href="./Services/it-support.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">IT Support</a>
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Co-Managed IT</a>
         <a href="./Services/bdr.html" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Backup & Recovery</a>
 
@@ -696,6 +723,31 @@
     </div>
     
     </section>
+
+    <!--Contact Us Section-->
+        <section class="py-20 bg-background-light" id="blog" id="contactus">  
+                <div class="text-center justify-center mb-12">
+                    <h2 class="text-3xl md:text-4xl font-bold font-display text-slate-900 dark:text-white">Let's Get In Touch</h2>
+                    <p class="mt-4 max-w-2xl mx-auto text-slate-600 dark:text-slate-400">Our staff of industry experts are standing by to assist with your needs. Please submit this form and we will respond to your inquiry shortly...</p>
+                </div>
+                <div class="flex justify-center items-start w-full gap-x-[3%] flex-wrap mt-[3%]">
+                    <div class="w-[74%] min-w-[350px] max-w-[500px] bg-white rounded">
+                        <div class="pipedriveWebForms" data-pd-webforms="https://webforms.pipedrive.com/f/5Xatq9rH91MMhKiNuyKIwWHyjIOgsHxUA5XlveqlDEEMG0BwtfEkoqF1OXxWr1NoNd"><script src="https://webforms.pipedrive.com/f/loader"></script></div>
+                    </div>
+
+                    <div class="py-[10%] px-4 w-full text-sm md:py-20 md:w-[26%]">
+                        <h2 class="text-[1.6rem] font-bold py-4">Information</h2> 
+                        <div class="min-h-[5px] min-w-full bg-gray-300">
+                            <div class="min-h-[5px] w-[30%] bg-[#bf2026]"></div>
+                        </div>
+                        <a href="tel:405-947-4626" class="leading-[2.5] text-[1.5rem] tracking-[1px] my-3 text-gray-600 font-semibold">(405) 947-4626</a>  
+                        <p class="leading-[3] text-xl"><span class="font-semibold"> Business Hours:</span> Monday - Friday 8:00 AM - 5:00 PM</p>
+                        <p class="leading-[3] text-xl"><span class="font-semibold"> Email:</span> customercare@summitsecureit.com</p>
+                        <p class="leading-[3] text-xl"><span class="font-semibold">Address:</span> 500 Enterprise Dr, Edmond, OK 73013</p>
+                        <img src="../asset/gears_00000.gif" width="100%" height="100%" alt="Summit IT Gears">
+                    </div>
+                </div>
+        </section>
 
 </main>
 
