--- a/Services/managed-cybersecurity.html
+++ b/Services/managed-cybersecurity.html
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;family=Orbitron:wght@600;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,typography,container-queries"></script>
+<link rel="stylesheet" href="../css/services.css">
 <script>
     tailwind.config = {
       darkMode: "class",
@@ -32,82 +33,6 @@
       },
     };
   </script>
-<style type="text/tailwindcss">.material-symbols-outlined {
-    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24
-    }
-.hero-bg-light {
-    background-color: #f8fafc;
-    background-image: radial-gradient(circle at 1% 1%, rgba(191, 32, 38, 0.05), transparent 30%), radial-gradient(circle at 99% 99%, rgba(46, 74, 111, 0.05), transparent 30%);
-}
-.dark .hero-bg-light {
-    background-color: #18181B;
-    background-image: radial-gradient(circle at 100% 0%, rgba(191, 32, 38, 0.3), transparent 40%), radial-gradient(circle at 0% 100%, rgba(46, 74, 111, 0.6), transparent 40%);
-}
-details > summary {
-    list-style: none
-    }
-details > summary::-webkit-details-marker {
-    display: none
-    }
-details > summary .material-symbols-outlined {
-    transition: transform 0.2s ease-in-out
-    }
-details[open] > summary .material-symbols-outlined {
-    transform: rotate(180deg)
-    }
-.check-list-item {
-    background-image: url(https://lh3.googleusercontent.com/aida-public/AB6AXuA5_iFUXcR6prvBEECZd-c-FH4F6Ssm5dPdG5VC5mdfN74bhfVE3xtbo3PiActaEYnuvdEe3t1NzdlT3X2hGJAC4aXCMCvZByFKzwj7PznFoyFCqpALT4oxVzJ8DNhcNYLbcYEuKg9k9Rou2LCMePyY_XEcBfeqM4ejzirTMUccNjYpmjjdQxA93AgkblQvGBLsg0WJlvcymIP3zMTr6VveUmjYdmKedl522NzuhT7iu3l1Hs5ekVbKk3CKgntlmjUr9LQgEB5Jy5CT);
-    background-repeat: no-repeat;
-    background-position: left center;
-    background-size: 1.25rem;
-    padding-left: 2rem
-    }
-.step-line {
-    content: '';
-    position: absolute;
-    left: 1.25rem;
-    top: 3.5rem;
-    bottom: -1rem;
-    width: 2px;
-    background-color: #e2e8f0;
-}
-.dark .step-line {
-    background-color: #475569;
-}
-
-
-.step:last-child .step-line {
-    display: none;
-}
-
-/*Scroll Functionality CSS*/
-
-    /*For Scroll Transition from Left*/
-    .scroll-item {
-        opacity: 0;
-        transform: translateX(-30px);
-        transition: all .8s ease-in-out;
-    }
-    
-    .scroll-item.visible {
-        opacity: 1;
-        transform:translateX(0);
-    }
-
-    /*For Scroll Transition from Right*/
-    .scroll-item-right {
-        opacity: 0;
-        transform: translateX(60px);
-        transition: all .8s ease-in-out;
-    }
-
-    .scroll-item-right.visible {
-        opacity: 1; 
-        transform: translateX(0px);
-        transition: all .8s ease-in-out;
-    }
-</style>
-
 
 <script defer="" src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
@@ -120,9 +45,6 @@ details[open] > summary .material-symbols-outlined {
         <a class="flex items-center space-x-3" href="../index.html">
           <img alt="Summit IT Solutions Logo" class="w-200 h-28" src="../asset/SITS logo.png"/>
         </a>
-  
-
-
 
 <nav class="hidden xl:flex items-center space-x-8">
   
@@ -136,7 +58,7 @@ details[open] > summary .material-symbols-outlined {
          x-transition:leave="transition ease-in duration-150"
          x-transition:leave-start="opacity-100 transform scale-100"
          x-transition:leave-end="opacity-0 transform scale-95"
-         class="absolute z-10 mt-2 w-56 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
+         x-cloak class="absolute z-10 mt-2 w-56 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
       <div class="py-1 text-center">
         <a href="#managed-cybersecurity" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Managed Cybersecurity</a>
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Penetration Testing</a>
@@ -164,7 +86,7 @@ details[open] > summary .material-symbols-outlined {
          x-transition:leave="transition ease-in duration-150"
          x-transition:leave-start="opacity-100 transform scale-100"
          x-transition:leave-end="opacity-0 transform scale-95"
-         class="absolute z-10 mt-2 w-48 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
+         x-cloak class="absolute z-10 mt-2 w-48 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
       <div class="py-1 text-center">
         <a href="#about-us" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Business Phones</a>
         <a href="#team" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Networking Equipment</a>
@@ -188,7 +110,7 @@ details[open] > summary .material-symbols-outlined {
          x-transition:leave="transition ease-in duration-150"
          x-transition:leave-start="opacity-100 transform scale-100"
          x-transition:leave-end="opacity-0 transform scale-95"
-         class="absolute z-10 mt-2 w-56 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
+         x-cloak class="absolute z-10 mt-2 w-56 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
       <div class="py-1 text-center">
         <a href="#managed-cybersecurity" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-slate-700 font-display">Law Firms</a>
         <a href="#it-support" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent dark:hover:bg-slate-700 font-display">Accounting</a>
@@ -217,7 +139,7 @@ details[open] > summary .material-symbols-outlined {
          x-transition:leave="transition ease-in duration-150"
          x-transition:leave-start="opacity-100 transform scale-100"
          x-transition:leave-end="opacity-0 transform scale-95"
-         class="absolute z-10 mt-2 w-48 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
+         x-cloak class="absolute z-10 mt-2 w-48 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
       <div class="py-1 text-center">
         <a href="#about-us" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Why Summit?</a>
         <a href="#careers" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Careers</a>
@@ -236,7 +158,7 @@ details[open] > summary .material-symbols-outlined {
          x-transition:leave="transition ease-in duration-150"
          x-transition:leave-start="opacity-100 transform scale-100"
          x-transition:leave-end="opacity-0 transform scale-95"
-         class="absolute z-10 mt-2 w-48 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
+         x-cloak class="absolute z-10 mt-2 w-48 rounded-md shadow-lg bg-white dark:bg-slate-800 ring-1 ring-black ring-opacity-5 focus:outline-none origin-top-left">
       <div class="py-1 text-center">
         <a href="#latest-posts" class="block px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 hover:text-accent  dark:hover:bg-slate-700 font-display">Blog Center</a>
       </div>
@@ -459,7 +381,7 @@ details[open] > summary .material-symbols-outlined {
       </div>
       <div class="mt-16 grid lg:grid-cols-2 gap-12 items-start">
         <div class="relative">
-          <div class="step relative pl-16 pb-8">
+          <div class="step relative pl-16 pb-8 scroll-item">
             <div class="step-line"></div>
             <div class="absolute left-0 top-0 flex items-center justify-center w-10 h-10 rounded-full bg-accent text-white font-bold font-display">1</div>
             <h3 class="text-xl font-bold font-display text-slate-900 dark:text-white">Security Operations Center (SOC)</h3>
@@ -470,14 +392,14 @@ details[open] > summary .material-symbols-outlined {
                 <span class="material-symbols-outlined ml-1 text-lg transition-transform duration-200 group-open:rotate-180">expand_more</span>
               </summary>
               <div class="mt-3 p-4 bg-background-light dark:bg-surface-dark border border-slate-200 dark:border-slate-600 rounded-lg">
-<ul class="space-y-2 text-sm text-slate-600 dark:text-slate-400">
-<li class="flex items-start"><span class="material-symbols-outlined text-accent text-base mr-2 mt-0.5">check_circle</span><span><strong>Real-time Analysis:</strong> Continuous log correlation to detect suspicious activity.</span></li>
-<li class="flex items-start"><span class="material-symbols-outlined text-accent text-base mr-2 mt-0.5">check_circle</span><span><strong>Expert Triage:</strong> Certified analysts investigate and validate every alert, eliminating false positives.</span></li>
-</ul>
+                <ul class="space-y-2 text-sm text-slate-600 dark:text-slate-400">
+                  <li class="flex items-start"><span class="material-symbols-outlined text-accent text-base mr-2 mt-0.5">check_circle</span><span><strong>Real-time Analysis:</strong> Continuous log correlation to detect suspicious activity.</span></li>
+                  <li class="flex items-start"><span class="material-symbols-outlined text-accent text-base mr-2 mt-0.5">check_circle</span><span><strong>Expert Triage:</strong> Certified analysts investigate and validate every alert, eliminating false positives.</span></li>
+                </ul>
               </div>
           </details>
         </div>
-        <div class="step relative pl-16 pb-8">
+        <div class="step relative pl-16 pb-8 scroll-item">
           <div class="step-line"></div>
           <div class="absolute left-0 top-0 flex items-center justify-center w-10 h-10 rounded-full bg-accent text-white font-bold font-display">2</div>
           <h3 class="text-xl font-bold font-display text-slate-900 dark:text-white">Managed Detection &amp; Response (MDR)</h3>
@@ -495,7 +417,7 @@ details[open] > summary .material-symbols-outlined {
             </div>
           </details>
         </div>
-        <div class="step relative pl-16 pb-8">
+        <div class="step relative pl-16 pb-8 scroll-item">
           <div class="step-line"></div>
           <div class="absolute left-0 top-0 flex items-center justify-center w-10 h-10 rounded-full bg-accent text-white font-bold font-display">3</div>
           <h3 class="text-xl font-bold font-display text-slate-900 dark:text-white">Vulnerability Management</h3>
@@ -514,7 +436,7 @@ details[open] > summary .material-symbols-outlined {
           </details>
         </div>
 
-        <div class="step relative pl-16">
+        <div class="step relative pl-16 scroll-item">
           <div class="absolute left-0 top-0 flex items-center justify-center w-10 h-10 rounded-full bg-accent text-white font-bold font-display">4</div>
             <h3 class="text-xl font-bold font-display text-slate-900 dark:text-white">Security Awareness Training</h3>
             <p class="mt-2 text-slate-600 dark:text-slate-400">Your people are a critical defense layer. We empower your team with engaging training and phishing simulations to build a strong security culture.</p>
@@ -532,7 +454,7 @@ details[open] > summary .material-symbols-outlined {
             </details>
         </div>
       </div>
-      <div class="sticky top-28 bg-white dark:bg-slate-800 p-8 rounded-xl border border-slate-200 dark:border-slate-700 shadow-xl">
+      <div class="sticky top-28 bg-white dark:bg-slate-800 p-8 rounded-xl border border-slate-200 dark:border-slate-700 shadow-xl scroll-item-right">
         <h3 class="text-xl font-bold font-display text-primary">Your Security Dashboard</h3>
         <p class="mt-3 text-slate-600 dark:text-slate-400">We believe in full transparency. Our process is backed by a client portal that gives you a real-time view of your security posture.</p>
         <div class="mt-6 space-y-4">
@@ -701,4 +623,8 @@ details[open] > summary .material-symbols-outlined {
   </div>
 </footer>
 </div>
-</body></html>
+</body>
+<!--JavaScipt-->
+<script src="../js/script.js"></script>
+
+</html>
