Changing the footer on these

--- a/Services/conference-service.html
+++ b/Services/conference-service.html
@@ -1100,14 +1100,21 @@
                   <a
                     class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
                     href="#"
-                    >Cloud Services</a
+                    >Compliance</a
                   >
                 </li>
                 <li>
                   <a
                     class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
                     href="#"
-                    >Compliance</a
+                    >Managed Print Services</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
+                    href="#"
+                    >New Office Setup</a
                   >
                 </li>
               </ul>
@@ -1235,13 +1242,7 @@
                     >Conference Rooms</a
                   >
                 </li>
-                <li>
-                  <a
-                    class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
-                    href="#"
-                    >New Office Setup</a
-                  >
-                </li>
+                
               </ul>
             </div>
           </div>
@@ -1255,7 +1256,6 @@
       </footer>
     </div>
   </body>
-
   <!--JavaScipt-->
   <script src="../js/script.js"></script>
 </html>
