--- a/Services/managed-print.html
+++ b/Services/managed-print.html
@@ -1016,14 +1016,21 @@
                   <a
                     class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
                     href="#"
-                    >Cloud Services</a
+                    >Compliance</a
                   >
                 </li>
                 <li>
                   <a
                     class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
                     href="#"
-                    >Compliance</a
+                    >Managed Print Services</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
+                    href="#"
+                    >New Office Setup</a
                   >
                 </li>
               </ul>
@@ -1151,13 +1158,7 @@
                     >Conference Rooms</a
                   >
                 </li>
-                <li>
-                  <a
-                    class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
-                    href="#"
-                    >New Office Setup</a
-                  >
-                </li>
+                
               </ul>
             </div>
           </div>
