--- a/Services/it-management.html
+++ b/Services/it-management.html
@@ -858,7 +858,7 @@
         </section>
       </main>
 
-      <footer
+    <footer
         class="bg-accent dark:bg-slate-900 border-t border-black dark:border-slate-800 text-white"
       >
         <div class="container mx-auto px-6 py-12 md:py-16 md:px-16">
@@ -986,14 +986,21 @@
                   <a
                     class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
                     href="#"
-                    >Cloud Services</a
+                    >Compliance</a
                   >
                 </li>
                 <li>
                   <a
                     class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
                     href="#"
-                    >Compliance</a
+                    >Managed Print Services</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
+                    href="#"
+                    >New Office Setup</a
                   >
                 </li>
               </ul>
@@ -1121,13 +1128,7 @@
                     >Conference Rooms</a
                   >
                 </li>
-                <li>
-                  <a
-                    class="text-white dark:text-slate-400 hover:text-gray-300 dark:hover:text-gray-300"
-                    href="#"
-                    >New Office Setup</a
-                  >
-                </li>
+                
               </ul>
             </div>
           </div>
