--- a/Services/bdr.html
+++ b/Services/bdr.html
@@ -519,10 +519,10 @@
           </div>
         </div>
         <div class="lg:col-span-6 lg:col-start-8 relative flex items-center justify-center">
-          <div class="relative w-[300px] h-[300px] md:w-[400px] md:h-[400px] flex items-center justify-center">
-            <div class="absolute inset-0 bg-primary/10 dark:bg-primary/20 rounded-full animate-pulse"></div>
-            <div class="absolute inset-4 bg-primary/20 dark:bg-primary/30 rounded-full animate-pulse [animation-delay:0.2s]"></div>
-            <span class="material-symbols-outlined text-primary text-[150px] md:text-[200px] relative z-10" style="font-variation-settings: 'FILL' 1, 'wght' 300, 'GRAD' 0, 'opsz' 48">cloud_sync</span>
+          <div class="relative w-[300px] h-[300px] md:w-[600px] md:h-[600px] flex items-center justify-center">
+            <div class="absolute inset-0 bg-[#FF6B6B]/10 dark:bg-primary/20 rounded-full animate-pulse"></div>
+            <div class="absolute inset-4 bg-[#FF6B6B]/60 dark:bg-primary/30 rounded-full animate-pulse [animation-delay:0.2s]"></div>
+            <span class="material-symbols-outlined text-primary text-[150px] md:text-[200px] relative z-10" style="font-variation-settings: 'FILL' 1, 'wght' 300, 'GRAD' 0, 'opsz' 48"><img src="../asset/backupdisastericon_2.gif" class="w-[500px] px-10"></span>
           </div>
         </div>
       </div>
