Javascript was not working, now its working.

--- a/index.html
+++ b/index.html
@@ -1080,5 +1080,5 @@
     </div>
   </body>
   <!--JavaScipt-->
-  <script src="../js/script.js"></script>
+  <script src="./js/script.js"></script>
 </html>
