--- a/Services/compliance.html
+++ b/Services/compliance.html
@@ -702,10 +702,10 @@
                 class="mt-12 grid grid-cols-1 md:grid-cols-4 gap-8 text-center relative"
               >
                 <!-- Connector line -->
-                <div
+                <!-- <div
                   class="hidden md:block absolute top-1/2 left-0 w-full h-0.5 bg-gray-300 dark:bg-gray-700"
                   style="transform: translateY(-50%); margin-top: -3.5rem"
-                ></div>
+                ></div> -->
                 <div class="relative flex flex-col items-center">
                   <div
                     class="w-20 h-20 rounded-full bg-primary/20 dark:bg-primary/30 flex items-center justify-center border-4 border-white dark:border-background-dark"
