--- a/Services/compliance.html
+++ b/Services/compliance.html
@@ -893,7 +893,7 @@
                     class="bg-white dark:bg-gray-900 rounded-xl shadow-lg p-8 relative"
                   >
                     <span
-                      class="material-symbols-outlined text-7xl text-primary/10 dark:text-primary/20 absolute top-4 left-4 -z-0"
+                      class="material-symbols-outlined text-7xl text-primary/10 dark:text-primary/20 absolute top-4 right-4 -z-0"
                       >format_quote</span
                     >
                     <blockquote class="relative z-10">
@@ -907,6 +907,7 @@
                         than ever before."
                       </p>
                     </blockquote>
+                       <div class="italic py-4 text-md">- Placeholder</div> 
                     </div>
                   </section>
                       <footer
