More color changes and font displays

--- a/Services/compliance.html
+++ b/Services/compliance.html
@@ -526,9 +526,9 @@
                 >
               </div>
               <h1
-                class="text-4xl sm:text-5xl lg:text-6xl font-black leading-tight tracking-tighter"
+                class="text-4xl sm:text-5xl lg:text-6xl font-black leading-tight tracking-tighter font-display leading-normal"
               >
-                Navigate Complexity. Mitigate Risk. Ensure Compliance.
+                Navigate Complexity. <span class="text-accent">Mitigate Risk.</span> Ensure Compliance.
               </h1>
               <p
                 class="mt-6 text-lg sm:text-xl max-w-3xl mx-auto text-gray-700 dark:text-gray-300"
@@ -537,7 +537,7 @@
                 landscape, protect your critical data, and build a resilient,
                 audit-ready enterprise.
               </p>
-              <div class="mt-10 flex justify-center gap-4">
+              <div class="mt-10 flex justify-center gap-4 font-display">
                 <button
                   class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 bg-primary text-white text-base font-bold leading-normal tracking-[0.015em] hover:bg-red-700 transition-colors"
                 >
@@ -607,7 +607,7 @@
             <div class="max-w-5xl mx-auto">
               <div class="text-center">
                 <h2
-                  class="text-3xl sm:text-4xl font-black leading-tight tracking-tight"
+                  class="text-3xl sm:text-4xl font-black leading-tight tracking-tight font-display"
                 >
                   Is Your Organization Truly Prepared?
                 </h2>
@@ -691,7 +691,7 @@
             <div class="max-w-5xl mx-auto">
               <div class="text-center">
                 <h2
-                  class="text-3xl sm:text-4xl font-black leading-tight tracking-tight"
+                  class="text-3xl sm:text-4xl font-black leading-tight tracking-tight font-display"
                 >
                   Our Proven Compliance Process
                 </h2>
@@ -770,7 +770,7 @@
             <div class="max-w-5xl mx-auto">
               <div class="text-center">
                 <h2
-                  class="text-3xl sm:text-4xl font-black leading-tight tracking-tight"
+                  class="text-3xl sm:text-4xl font-black leading-tight tracking-tight font-display"
                 >
                   Expertise Across Key Frameworks
                 </h2>
@@ -817,7 +817,7 @@
           >
             <div class="max-w-4xl mx-auto text-center">
               <h2
-                class="text-3xl sm:text-4xl font-black leading-tight tracking-tight text-white"
+                class="text-3xl sm:text-4xl font-black leading-tight tracking-tight text-white font-display"
               >
                 Uncover Your Hidden Risks
               </h2>
@@ -866,7 +866,7 @@
                     </select>
                   </div>
                   <button
-                    class="w-full flex justify-center py-3 px-4 border border-transparent rounded-lg shadow-sm text-base font-medium text-white bg-primary hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-colors"
+                    class="w-full flex justify-center py-3 px-4 border border-transparent rounded-lg shadow-sm text-base font-medium text-white bg-primary hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-colors font-display"
                     type="submit"
                   >
                     Start My Risk Assessment
