Changing more font

--- a/Services/conference-service.html
+++ b/Services/conference-service.html
@@ -522,7 +522,7 @@
                   flawless AV, effortless connectivity, and scalable technology,
                   all for a predictable monthly cost.
                 </p>
-                <div class="mt-10 flex flex-col sm:flex-row gap-4">
+                <div class="mt-10 flex flex-col sm:flex-row gap-4 font-display">
                   <a
                     class="inline-block bg-primary text-white font-medium py-3 px-8 rounded-lg hover:opacity-90 transition-opacity text-center"
                     href="#contact"
@@ -850,7 +850,7 @@
                       (Based on average employee cost)
                     </p>
                     <button
-                      class="mt-6 w-full bg-primary text-white font-medium py-3 px-6 rounded-lg hover:opacity-90 transition-opacity"
+                      class="mt-6 w-full bg-primary text-white font-medium py-3 px-6 rounded-lg hover:opacity-90 transition-opacity font-display"
                       type="button"
                     >
                       Get a Custom ROI Report
@@ -931,7 +931,7 @@
                     </div>
                   </div>
                   <a
-                    class="!mt-6 inline-block w-full text-center bg-primary/10 text-primary dark:bg-primary/20 dark:text-white font-medium py-3 px-6 rounded-lg hover:bg-primary/20 transition-colors"
+                    class="!mt-6 inline-block w-full text-center bg-primary/10 text-primary dark:bg-primary/20 dark:text-white font-medium py-3 px-6 rounded-lg hover:bg-primary/20 transition-colors font-display"
                     href="#"
                     >Start a Room Configuration</a
                   >
